--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "DarkEye123",
   "license": "MIT",
   "dependencies": {
-    "canvas-sketch": "^0.7.7"
+    "canvas-sketch": "^0.7.7",
+    "canvas-sketch-util": "^1.10.0"
   }
 }
